--- a/styles.css
+++ b/styles.css
@@ -130,7 +130,7 @@ p>a:hover
 body{
     margin: 0;
     height: 100vh;
-    background: linear-gradient(-45deg,#000000,#002D62,#007FFF,#82DBFF,
+    background: linear-gradient(-45deg,#002D62,#007FFF,#82DBFF,
     #00A2E2);
     background-size: 400% 400%;
     animation: bg 12s ease infinite;
