--- a/styles.css
+++ b/styles.css
@@ -7,8 +7,7 @@
 
 body{
     width: 100vw;
-    height: 100vh;
-    background: url(./bg.jpg)no-repeat;
+    height: 100vh;    background: url(./bg.jpg)no-repeat;
     background-position: center;
     background-size: cover;
     display: flex;
